Código de execução de shell: Modificação da lógica realizada